--- a/packages/docs/blog/2021-07-09-remotion-2-2.md
+++ b/packages/docs/blog/2021-07-09-remotion-2-2.md
@@ -16,7 +16,7 @@ Welcome to the release notes of Remotion 2.2! It's been a while since v2.1, but 
 
 We developers use environment variables extensively to manage configuration, secrets and other stuff you don't want to commit to a Github repo. If you write videos with code, environment variables are useful too!
 
-We added support for environment variables from the CLI, using a `.env` file, and allowing you to pass variables via our Node.JS APIs too. [Click here to learn more.](/docs/env-variables)
+We added support for environment variables from the CLI, using a `.env` file, and allowing you to pass environment variables via our Node.JS APIs too. [Click here to learn more.](/docs/env-variables)
 
 ## `<Freeze />` component
 
@@ -37,13 +37,13 @@ export const MyVideo = () => {
 }
 ```
 
-However, it works for any content. As you can see the API is dead simple. You can combine it with the [`<Sequence>`](/docs/sequence) API to make any content play, pause and then continue again.
+However, it works for any content. As you can see the API is dead simple! You can combine it with the [`<Sequence>`](/docs/sequence) API to make any content play, pause and then continue again.
 
-[Read more about the `<Freeze />` component here.](/docs/freeze)
+[Read the docs for the `<Freeze />` component here.](/docs/freeze)
 
 ## Video + Audio `playbackRate`
 
-This prop allows you to slow down or speed up video and audio elements! Now you can import a video in normal speed and play it in slow motion or timelapse without rerendering the video.
+This prop allows you to slow down or speed up video and audio elements! Now you can import a video in normal speed and play it in slow motion or timelapse without re-rendering the video.
 
 ```tsx twoslash title="LightningSpeed.tsx"
 import {Video} from 'remotion';
@@ -73,9 +73,9 @@ Learn more about [`@remotion/three`](/docs/three) and get started using our [tem
 
 ## ProRes support and MKV support
 
-Creating MP4 videos with React, that's just our marketing tagline. We support a lot of other codecs too, [like H265, WebM even transparent ones!](/docs/encoding)
+Creating MP4 videos with React, that's just our marketing tagline. We support a lot of other codecs too, [like H265, WebM, and even transparent WebM!](/docs/encoding)
 
-We have now added two more:
+We are adding two more codecs:
 
 - ProRes is a codec suitable for video editors using Final Cut Pro, Adobe Premiere or Davinci Resolve. Say you want to create an overlay animation using Remotion and use it in a traditional video cutting program, you can now use ProRes to export the video with an alpha channel and import it to many other programs losslessly.
 
@@ -89,19 +89,19 @@ The [`@remotion/player`](/docs/player), currently still experimental, allows Rem
 
 ### Audio controls
 
-A player now has a volume slider, and a mute button to allow the user to control the video. You can decide whether you want to display these controls using the `showVolumeControls` prop.
+A player now has a volume slider, and a mute button to allow the user to control the video. You can decide whether you want to display these controls using the [`showVolumeControls`](/docs/player/#showvolumecontrols) prop.
 
-Audio can also be controlled programmatically. We added the methods `getVolume()`, `setVolume()`, `mute()`, `unmute()` and `isMuted()` to allow you to implement your own solutions.
+Audio can also be controlled programmatically. We added the methods [`getVolume()`](/docs/player/#getvolume), [`setVolume()`](/docs/player/#setvolume), [`mute()`](/docs/player/#mute), [`unmute()`](/docs/player/#unmute) and [`isMuted()`](/docs/player/#ismuted) to allow you to implement your own solutions.
 
 ### `timeupdate` event
 
-Inspired by the HTML5 event with the same name, we added a `timeupdate` event to the Player. Unlike the `seeked` event, it does not fire on every frame, so if you want only periodic updates about the time being updated, you can use this event without having to throttle it.
+Inspired by the HTML5 event with the same name, we added a [`timeupdate`](/docs/player/#timeupdate) event to the Player. Unlike the [`seeked`](/docs/player/#seeked) event, it does not fire on every frame, so if you want only periodic updates about the time being updated, you can use this event without having to throttle it.
 
-### `clickToPlay` prop
+### [`clickToPlay`](/docs/player/#clicktoplay) prop
 
 This prop allows you to control whether the user is allowed to click on the video to make it pause or play. It is true by default if the controls of the player are enabled.
 
-### `doubleClickToFullscreen` prop
+### [`doubleClickToFullscreen`](/docs/player/#doubleclicktofullscreen) prop
 
 This prop allows you to control whether the user is allowed to double click on the video to make it go fullscreen. If enabled, single-clicking to pause the video will have a short delay in order to wait for a potential second click.
 
@@ -152,19 +152,19 @@ Finally, the [homepage of Remotion](https://remotion.dev) got a makeover! We hop
 
 - Fixed a memory leak while calling getCompositions() [#480](https://github.com/remotion-dev/remotion/pull/480)
 - Add emoji support to Dockerfile [#476](https://github.com/remotion-dev/remotion/pull/476)
-- The preview now shows the current time within a sequence in a timeline (d925768f)
-- TTF fonts can now be loaded locally
-- Fix Remotion Player assuming it's in a rendering environment
-- Fix getAudioMetadata() and getAudioDuration() not returning an error in the `onError` event (1ea7b151)
-- Added documentation on how to use TailwindCSS
-- Fixed documentation about how to use SASS/SCSS
-- If you are using a plain JS entry file, you can also use a remotion.config.js config file.
-- You can customize how many timeline tracks should be shown at most using `Config.Preview.setMaxTimelineTracks()`
-- Fixed a bug where environment variables would not be immediately accessible
-- Input props flag can now also be passed for preview
+- The preview now shows the current time within a sequence in a timeline [#468](https://github.com/remotion-dev/remotion/pull/468)
+- TTF fonts can now be loaded locally [#462](https://github.com/remotion-dev/remotion/pull/462)
+- Fix Remotion Player assuming it's in a rendering environment [#460](https://github.com/remotion-dev/remotion/pull/460)
+- Fix getAudioMetadata() and getAudioDuration() not returning an error in the `onError` event [#459](https://github.com/remotion-dev/remotion/pull/459)
+- Added documentation on how to use TailwindCSS [`69b079e`](https://github.com/remotion-dev/remotion/commit/69b079e)
+- Fixed documentation about how to use SASS/SCSS [`e92c917`](https://github.com/remotion-dev/remotion/commit/e92c917)
+- If you are using a plain JS entry file, you can also use a remotion.config.js config file [#475](https://github.com/remotion-dev/remotion/pull/475)
+- You can customize how many timeline tracks should be shown at most using `Config.Preview.setMaxTimelineTracks()` [#439](https://github.com/remotion-dev/remotion/pull/439)
+- Fixed a bug where environment variables would not be immediately accessible [#432](https://github.com/remotion-dev/remotion/pull/432)
+- Input props flag can now also be passed for preview [#430](https://github.com/remotion-dev/remotion/pull/430)
 - Better input validation of the most common functions
-- Improve rendering of very long videos, using less memory and avoiding a maximum callstack exceeded error message.
-- Setting `crf` to 0 is not allowed anymore for H264 videos as it will lead to a video that does not play on all platforms.
-- The docs for `<Sequence />` now have interactive examples.
-- A lot of tests have been added to the core functions.
-- The Typescript types have been improved to allow for more types of components to be passed to `component`.
+- Improve rendering of very long videos, using less memory and avoiding a maximum callstack exceeded error message. [#398](https://github.com/remotion-dev/remotion/pull/398)
+- Setting `crf` to 0 is not allowed anymore for H264 videos as it will lead to a video that does not play on all platforms. [#379](https://github.com/remotion-dev/remotion/pull/379)
+- The docs for `<Sequence />` now have interactive examples. [#378](https://github.com/remotion-dev/remotion/pull/378)
+- A lot of tests have been added to the core functions. [#376 etc.](https://github.com/remotion-dev/remotion/pull/376)
+- The Typescript types have been improved to allow for more types of components to be passed to `component`. [#372](https://github.com/remotion-dev/remotion/pull/372)
