--- a/packages/docs/blog/2021-07-09-remotion-2-2.md
+++ b/packages/docs/blog/2021-07-09-remotion-2-2.md
@@ -166,5 +166,24 @@ Finally, the [homepage of Remotion](https://remotion.dev) got a makeover! We hop
 - Improve rendering of very long videos, using less memory and avoiding a maximum callstack exceeded error message. [#398](https://github.com/remotion-dev/remotion/pull/398)
 - Setting `crf` to 0 is not allowed anymore for H264 videos as it will lead to a video that does not play on all platforms. [#379](https://github.com/remotion-dev/remotion/pull/379)
 - The docs for `<Sequence />` now have interactive examples. [#378](https://github.com/remotion-dev/remotion/pull/378)
-- A lot of tests have been added to the core functions. [#376 etc.](https://github.com/remotion-dev/remotion/pull/376)
+- A lot of tests have been added to the core functions. [#376](https://github.com/remotion-dev/remotion/pull/376) etc.
 - The Typescript types have been improved to allow for more types of components to be passed to `component`. [#372](https://github.com/remotion-dev/remotion/pull/372)
+
+## Thank you to all the contributors
+
+Most of these features were brought up and implemented by the community which is super awesome. Time for some shoutouts!
+
+- Thanks to [Björn Zeutzheim](https://github.com/olee) for implementing the `@remotion/three` package!
+- Thanks to [Frenco](https://github.com/frencojobs) for making all documentation code snippets typesafe and adding hover preview. You even fixed a bug in Twoslash, the library powering this feature and executed this with so much care!
+- Thanks to [cnnr](https://github.com/cnnrhill) for implementing environment variables support!
+- Thanks to [Arthur Denner](https://github.com/arthurdenner) for discovering the `document.fonts.ready` feature!
+- Thanks to [Ashik Meerankutty](https://github.com/ashikmeerankutty) for implementing the `timeupdate` event for the Player!
+- Thanks to [Soham Shah](https://github.comsohamsshah) for adding Github Issue Templates and working on a Next.JS template!
+- Thanks to [William Candillon](https://github.com/wcandillon) for implementing ProRes support!
+- Thanks to [Salvatore](https://github.com/dested) for implementing `playbackRate` support for Video and Audio components!
+- Thanks to [ahgsql](https://github.com/ahgsql) for improving how Sequences are displayed in the timeline!
+
+- Mika
+- Jonas Tobias Calvin etc
+
+## Business update
