refactor(docs): fix casing in GitHub

--- a/packages/docs/blog/2021-02-15-remotion-1-3.md
+++ b/packages/docs/blog/2021-02-15-remotion-1-3.md
@@ -93,4 +93,4 @@ interpolate(frame, [0, 100], {
 
 ## In case you missed it
 
-Another example was added - [Spotify Wrapped!](https://twitter.com/JNYBGR/status/1360269270526136320) This is a fully dynamic example where you can replace all data with a command line flag. There's a 2 hour tutorial on YouTube and the source code is on Github.
+Another example was added - [Spotify Wrapped!](https://twitter.com/JNYBGR/status/1360269270526136320) This is a fully dynamic example where you can replace all data with a command line flag. There's a 2 hour tutorial on YouTube and the source code is on GitHub.
