--- a/packages/docs/blog/2021-07-09-remotion-2-2.md
+++ b/packages/docs/blog/2021-07-09-remotion-2-2.md
@@ -14,7 +14,7 @@ Welcome to the release notes of Remotion 2.2! It's been a while since v2.1, but 
 
 ## Environment variable support
 
-We developers use environment variables extensively to manage configuration, secrets and other stuff you don't want to commit to a Github repo. If you write videos with code, environment variables are useful too!
+We developers use environment variables extensively to manage configuration, secrets and other stuff you don't want to commit to a GitHub repo. If you write videos with code, environment variables are useful too!
 
 We added support for environment variables from the CLI, using a `.env` file, and allowing you to pass environment variables via our Node.JS APIs too. [Click here to learn more.](/docs/env-variables)
 
@@ -178,7 +178,7 @@ Most of these features were brought up and implemented by the community which is
 - Thanks to [cnnr](https://github.com/cnnrhill) for implementing environment variables support!
 - Thanks to [Arthur Denner](https://github.com/arthurdenner) for discovering the `document.fonts.ready` feature!
 - Thanks to [Ashik Meerankutty](https://github.com/ashikmeerankutty) for implementing the `timeupdate` event for the Player!
-- Thanks to [Soham Shah](https://github.comsohamsshah) for adding Github Issue Templates and working on a Next.JS template!
+- Thanks to [Soham Shah](https://github.comsohamsshah) for adding GitHub Issue Templates and working on a Next.JS template!
 - Thanks to [William Candillon](https://github.com/wcandillon) for implementing ProRes support!
 - Thanks to [Salvatore](https://github.com/dested) for implementing `playbackRate` support for Video and Audio components!
 - Thanks to [ahgsql](https://github.com/ahgsql) for improving how Sequences are displayed in the timeline!
