suggest to install @types/three
Former-commit-id: f55beb0c32141ee80f795bcccac5fc6a36d81792

--- a/packages/docs/docs/three.mdx
+++ b/packages/docs/docs/three.mdx
@@ -37,7 +37,7 @@ values={[
 <TabItem value="npm">
 
 ```bash
-npm i three @react-three/fiber @remotion/three
+npm i three @react-three/fiber @remotion/three @types/three
 ```
 
   </TabItem>
@@ -45,7 +45,7 @@ npm i three @react-three/fiber @remotion/three
   <TabItem value="yarn">
 
 ```bash
-yarn add three @react-three/fiber @remotion/three
+yarn add three @react-three/fiber @remotion/three @types/three
 ```
 
   </TabItem>
