--- a/packages/docs/docs/config.mdx
+++ b/packages/docs/docs/config.mdx
@@ -308,7 +308,7 @@ The [command line flag](/docs/cli) `--quality` will take precedence over this op
 
 _Available from Version 1.4._
 
-The "Constant Rate Factor" (CRF) of the output. [Use this setting to tell FFMPEG how to trade off size and quality.](encoding#controlling-quality-using-the-crf-setting)
+The "Constant Rate Factor" (CRF) of the output. [Use this setting to tell FFMPEG how to trade off size and quality.](/docs/encoding#controlling-quality-using-the-crf-setting)
 
 Ranges for CRF scale, by codec:
 
