--- a/packages/docs/docs/freeze.mdx
+++ b/packages/docs/docs/freeze.mdx
@@ -47,5 +47,5 @@ const MyVideo = () => {
 
 ## See also
 
-- [`<Video/>` Playback speed](video#controlling-playback-speed)
-- [`useCurrentFrame()`](use-current-frame)
+- [`<Video/>` Playback speed](/docs/video#controlling-playback-speed)
+- [`useCurrentFrame()`](/docs/use-current-frame)
