respect log level everywher

--- a/packages/docs/docs/config.mdx
+++ b/packages/docs/docs/config.mdx
@@ -75,7 +75,7 @@ Increase or decrease the amount of log messages in the CLI.
 Acceptable values:
 
 - `error`: Silent except error messages.
-- `warning`: Only showing errors and warnings.
+- `warn`: Only showing errors and warnings.
 - `info` (_default_): Default output - besides errors and warnings, prints progress and output location.
 - `verbose`: All of the above, plus browser logs and other debug info.
 
