develop blog post

--- a/packages/docs/blog/2021-09-27-remotion-2-4.md
+++ b/packages/docs/blog/2021-09-27-remotion-2-4.md
@@ -8,19 +8,31 @@ author_image_url: https://avatars2.githubusercontent.com/u/1629785?s=460&u=12eb9
 image: https://remotion-still.herokuapp.com/PreviewCard.png?title=Remotion%202.4&description=Redesigned%20editor,%20UI%20helpers%20and%20%20%22New%20composition%22%20dialog
 ---
 
-Remotion is all about how you can turn code into videos.
+Remotion is all about how you can make videos using code instead of clicking buttons. Nonetheless, today we spice up the user interface of the Remotion Preview and adding some functionality to it to complement.
 
 ## New toolbar
 
-All the actions that can be performed in the editor are now organized in a toolbar at the top, plus resources such as documentation, changelog, Github etc. are linked too.
+All the actions that can be performed in the editor are now organized in a toolbar at the top, plus we added quick links to resources such as Documentation, Changelog, GitHub, our Social Media accounts etc.
 
 <p align="center">
   <img src="/static/img/toolbar.gif" style={{maxWidth: 500}} />
 </p>
 
-## "New composition" pane
+## "New composition" helper
+
+You can press <kbd>N</kbd> to bring up a modal that helps you generate code for creating a new `<Composition />` or `<Still />`. You can drag the sliders to quickly adjust the dimensions and duration of the video. Once you are happy with the code, you can click the copy button and paste it in your `src/Video.tsx` file. If you choose an invalid configuration, we warn you right in the UI before you put it in your code.
+
+<p align="center">
+  <img src="/static/img/newcomp.png" style={{maxWidth: 700}} />
+</p>
 
 ## "Keyboard shortcuts" pane
+
+We added some more keyboard shortcuts, and to give you an overview, you can press <kbd>?</kbd> to bring up a list of all shortcuts.
+
+<p align="center">
+  <img src="/static/img/keyboard-shortcuts.png" style={{maxWidth: 450}} />
+</p>
 
 ## No dependencies
 
