--- a/packages/docs/blog/2021-08-11-remotion-2-3.md
+++ b/packages/docs/blog/2021-08-11-remotion-2-3.md
@@ -91,6 +91,9 @@ await renderStill({
   composition,
   webpackBundle: bundleLocation,
   output: '/tmp/still.png',
+  onError: (error) => {
+    console.error("The following error occured when rendering the still: ", error.message)
+  },
   inputProps: {
     custom: 'data'
   }
