--- a/packages/docs/blog/2021-02-26-remotion-1-4.md
+++ b/packages/docs/blog/2021-02-26-remotion-1-4.md
@@ -35,10 +35,10 @@ export const MyComp = () => {
   const [particles] = useState(() => {
     return new Array(100).fill(true).map(() => ({
       x: Math.random(),
-      y: Math.random()
+      y: Math.random(),
     }));
-  })
-}
+  });
+};
 ```
 
 While this will work while previewing the video, during rendering, the random numbers will change during frames. This is because Remotion spins up multiple instances of Chrome and the random numbers will be different in each instance.
@@ -46,7 +46,7 @@ While this will work while previewing the video, during rendering, the random nu
 To help you avoid this mistake, there is now a new ESLint rule that will warn when you use `Math.random()`. Instead using it, you can use the new [`random()`](/docs/random) API. It will take a `seed` parameter and output a number between 0 and 1. The point of it is: As long as you pass the same seed, you get the same output! That way you don't get unintended effects while multithreaded rendering is performed.
 
 ```tsx {7-8}
-import {random} from 'remotion';
+import { random } from "remotion";
 
 export const MyComp = () => {
   // ✅ Pseudo-random values that will be same across threads
@@ -55,8 +55,8 @@ export const MyComp = () => {
       x: random(`x-${idx}`),
       y: random(`y-${idx}`),
     }));
-  })
-}
+  });
+};
 ```
 
 Want to learn more? Read the new documentation page about [using randomness](/docs/using-randomness).
