run prettier over docs
Former-commit-id: 905b438064a2135d01843ff8375c3a7d130b5068

--- a/packages/docs/docs/freeze.mdx
+++ b/packages/docs/docs/freeze.mdx
@@ -30,7 +30,7 @@ The Freeze component is a high order component and accepts, besides it's childre
 ```tsx twoslash
 // @include: example-BlueSquare
 // ---cut---
-import {Freeze} from 'remotion';
+import { Freeze } from "remotion";
 
 const MyVideo = () => {
   return (
@@ -38,7 +38,7 @@ const MyVideo = () => {
       <BlueSquare />
     </Freeze>
   );
-}
+};
 ```
 
 ## Demo
