can remove patch-package

--- a/packages/docs/blog/2021-02-26-remotion-1-4.md
+++ b/packages/docs/blog/2021-02-26-remotion-1-4.md
@@ -45,7 +45,7 @@ While this will work while previewing the video, during rendering, the random nu
 
 To help you avoid this mistake, there is now a new ESLint rule that will warn when you use `Math.random()`. Instead using it, you can use the new [`random()`](/docs/random) API. It will take a `seed` parameter and output a number between 0 and 1. The point of it is: As long as you pass the same seed, you get the same output! That way you don't get unintended effects while multithreaded rendering is performed.
 
-```tsx {7-8}
+```tsx twoslash {7-8}
 import { random } from "remotion";
 
 export const MyComp = () => {
