--- a/packages/docs/blog/2021-08-11-remotion-2-3.md
+++ b/packages/docs/blog/2021-08-11-remotion-2-3.md
@@ -16,7 +16,7 @@ So far we focused on streamlining the workflow for making videos. While it was a
 
 [This new component](/docs/still) is the same as [`<Composition />`](/docs/composition) but is meant for defining a compositions that output a still image. Since it's already implied, you don't have to define the `fps` and `durationInFrames` properties.
 
-```tsx twoslash
+```tsx
 import {Still} from 'remotion';
 const Thumbnail: React.FC = () => null;
 // ---cut---
@@ -60,7 +60,7 @@ npx remotion still --props='{"custom": "data"}' src/index.tsx my-comp out.png
 
 If you render using the Node.JS APIs, we have a new equivalent API for rendering stills as well.
 
-```ts twoslash
+```ts
 // @module: ESNext
 // @target: ESNext
 import {bundle} from '@remotion/bundler';
