--- a/packages/docs/docs/freeze.mdx
+++ b/packages/docs/docs/freeze.mdx
@@ -6,7 +6,7 @@ sidebar_label: <Freeze />
 
 import { FreezeExample } from "../components/FreezeExample/FreezeExample";
 
-```twoslash include example
+```
 const BlueSquare: React.FC = () => <div></div>
 // - BlueSquare
 ```
@@ -27,7 +27,7 @@ The Freeze component is a high order component and accepts, besides it's childre
 
 ## Example usage
 
-```tsx twoslash
+```tsx
 // @include: example-BlueSquare
 // ---cut---
 import { Freeze } from "remotion";
