--- a/packages/docs/blog/2021-07-09-remotion-2-2.md
+++ b/packages/docs/blog/2021-07-09-remotion-2-2.md
@@ -25,6 +25,7 @@ This new core component will freeze all of it's children and make them think tha
 You can use it for example to display a still frame from a video:
 
 ```tsx twoslash title="MyVideo.tsx"
+// @filename: 1.tsx
 import {Freeze, Video} from 'remotion';
 import myVid from './vid.mp4';
 
@@ -46,6 +47,7 @@ However, it works for any content. As you can see the API is dead simple! You ca
 This prop allows you to slow down or speed up video and audio elements! Now you can import a video in normal speed and play it in slow motion or timelapse without re-rendering the video.
 
 ```tsx twoslash title="LightningSpeed.tsx"
+// @filename: 2.tsx
 import {Video} from 'remotion';
 import myVid from './vid.mp4';
 
