--- a/packages/docs/docs/transparent-videos.mdx
+++ b/packages/docs/docs/transparent-videos.mdx
@@ -22,6 +22,8 @@ In order to create a transparent video, you need at least version 1.4 of Remotio
 If you want to set these options and persist them, add this to your `remotion.config.ts` file (create it if you don't yet have one);
 
 ```tsx twoslash
+// @filename: 35.tsx
+
 import { Config } from "remotion";
 
 Config.Rendering.setImageFormat("png");
@@ -43,6 +45,8 @@ ProRes is supported by Final Cut Pro, Adobe Premiere and Davinci Resolve.
 Supported since v2.1.7, you can set the codec to `prores` and choose a ProRes profile with alpha support: Either: `4444` or `4444-hq`. The pixel format must be `yuva444p10le`.
 
 ```tsx twoslash
+// @filename: 36.tsx
+
 import { Config } from "remotion";
 
 Config.Rendering.setImageFormat("png");
@@ -62,6 +66,8 @@ You can also set the settings on the command line:
 Given the poor browser support, consider making two versions of a video, one with alpha channel, and an opaque video as a fallback. You can achieve this in Remotion using standard React props:
 
 ```tsx twoslash {1}
+// @filename: 37.tsx
+
 const MyVideo: React.FC<{
   transparent: boolean;
 }> = ({transparent}) => {
@@ -76,6 +82,8 @@ const MyVideo: React.FC<{
 It's a good practice to set a default when defining the composition:
 
 ```tsx twoslash {7-9}
+// @filename: 38.tsx
+
 import { Composition } from "remotion";
 const MyVideo: React.FC<{
   transparent: boolean;
