--- a/packages/docs/blog/2021-10-26-remotion-2-5.md
+++ b/packages/docs/blog/2021-10-26-remotion-2-5.md
@@ -23,7 +23,7 @@ _Thanks to [Ankesh](https://github.com/remotion-dev/remotion/pull/631) for imple
 
 ## `<Loop>` component
 
-Previously, in order to repeat content, you had to manually create a bunch of sequences and calculate the timestamps yourself. We added a helper called [`<Loop/>`](/docs/loop) which will repeat it’s children either indefinitely or for a fixed number of times.
+Previously, in order to repeat content, you had to manually create a bunch of sequences and calculate the timestamps yourself. We added a helper called [`<Loop />`](/docs/loop) which will repeat it’s children either indefinitely or for a fixed number of times.
 Another benefit is that we display the loop component cleanly in our timeline.
 
 _Thanks to [Brian Pederson](https://github.com/remotion-dev/remotion/pull/638) for implementing this feature!_
@@ -34,6 +34,8 @@ You can now change the playback rate in the editor and play a video in slow-moti
 
 It also works in the `<Player />`! See the new `playbackRate` prop and we also added a `ratechange` event - just like the native HTML5 Video element.
 
+<img src="/img/playbackrate.gif" />
+
 _Thanks to [Brian Pederson](https://github.com/remotion-dev/remotion/pull/656) for implementing this feature!_
 
 ## Support for <kbd>J</kbd>, <kbd>K</kbd>, <kbd>L</kbd> keyboard shortcuts
@@ -43,6 +45,10 @@ These new shortcuts are super handy for navigating through a timeline. With the 
 The <kbd>J</kbd> key works the same, but plays the video backwards. Now you can reach any point in the video easily with just those two keys, even if the video is playing, without using the mouse.
 
 Once you have reached the point where you want to pause the video and continue to code it, the <kbd>K</kbd> key will reset the playback rate to `1x` and pause the video.
+
+<img src="/img/jkl.gif" />
+
+Once you learn how to navigate using JKL keys, you'll never use your mouse for scrubbing again!
 
 _Thanks to [Brian Pederson](https://github.com/remotion-dev/remotion/pull/656) for implementing this feature!_
 
@@ -58,13 +64,15 @@ _Thanks to [Khalid Ansari](https://github.com/remotion-dev/remotion/pull/621) fo
 In case you don’t know Fig, it is a free macOS application that provides autocomplete for the terminal. What sounds like a gimmick, actually works surprisingly well and I personally would miss it a lot if I didn’t have it!
 The Remotion CLI that you can invoke using `npx remotion` now has full autocomplete support in Fig! You have to do nothing except install Fig.
 
-_Thanks to [Mattèo Gauthier](https://github.com/remotion-dev/remotion/pull/625) for implementing this feature!_
+<img src="/img/fig.gif" />
+
+_Thanks to [Mattèo Gauthier](https://github.com/withfig/autocomplete/pull/633) for implementing this feature!_
 
 ## Node.JS 17 support
 
 This version came out recently and broke almost every Webpack project because legacy crypto functions were removed.
 
-We added the necessary modifications to our default Webpack config, and even contributed a pull request to Webpack to fix the last remaining bug that would break Remotion with Node 17! If you are upgrading Node, definitely make sure get this new version of Remotion.
+We added the necessary modifications to our default Webpack config, and [even contributed a pull request to Webpack](https://github.com/webpack/webpack/pull/14557) to fix the last remaining bug that would break Remotion with Node 17! If you are upgrading Node, definitely make sure get this new version of Remotion.
 
 ## Monorepo migrated to `pnpm`
 
@@ -97,7 +105,7 @@ A few interesting updates for users of `@remotion/three`:
 
 ## More updates
 
-- Player error message
-- Windows FS bug fixed
-- Upgraded docusarus
-- Support for OTF fonts
+- Added support for OTF fonts - _Thanks [William Candillon](https://github.com/remotion-dev/remotion/pull/637)_!
+- Added possibility to customize `<Player>` error message - _Thanks [AudreyKj](https://github.com/remotion-dev/remotion/pull/654)_!
+- Windows Node.JS 14 cleanup bug fixed - _Thanks [Raznov](https://github.com/remotion-dev/remotion/pull/634)_!
+- Upgraded Docusaurus to the newest version, obtaining the newest features and layouts
