--- a/packages/docs/blog/2021-10-26-remotion-2-5.md
+++ b/packages/docs/blog/2021-10-26-remotion-2-5.md
@@ -32,7 +32,7 @@ _Thanks to [Brian Pederson](https://github.com/remotion-dev/remotion/pull/638) f
 
 You can now change the playback rate in the editor and play a video in slow-motion, in fast-forward, and even in reverse! We support speeds between -4x and 4x. This makes debugging animations that don’t look clean much easier.
 
-It also works in the `<Player />`! See the new `playbackRate` prop and we also added a `ratechange` event - just like the native HTML5 Video element.
+It also works in the `<Player />`! See the new [`playbackRate`](/docs/player#playbackrate) prop and we also added a [`ratechange`](/docs/player#ratechange) event - just like the native HTML5 Video element.
 
 <img src="/img/playbackrate.gif" />
 
@@ -52,16 +52,20 @@ Once you learn how to navigate using JKL keys, you'll never use your mouse for s
 
 _Thanks to [Brian Pederson](https://github.com/remotion-dev/remotion/pull/656) for implementing this feature!_
 
+:::tip
+Press the <kbd>?</kbd> button to learn about all keyboard shortcuts!
+:::
+
 ## `durationInFrames={Infinity}` is now optional
 
 If you wanted to delay an element but not cap it’s duration, you had to explicitly specify `durationInFrames={Infinity}` . Not anymore! This is now the default and may be omitted.
-If you upgrade the `@remotion/eslint-config` as well, we will automatically remove the prop when you have autofix enabled!
+If you upgrade the `@remotion/eslint-config` package as well, we will even automatically remove the prop when you have autofix enabled!
 
 _Thanks to [Khalid Ansari](https://github.com/remotion-dev/remotion/pull/621) for implementing this feature!_
 
 ## Fig autocomplete
 
-In case you don’t know Fig, it is a free macOS application that provides autocomplete for the terminal. What sounds like a gimmick, actually works surprisingly well and I personally would miss it a lot if I didn’t have it!
+In case you don’t know [Fig](https://fig.io/), it is a free macOS application that provides autocomplete for the terminal. What sounds like a gimmick, actually works surprisingly well and I personally would miss it a lot if I didn’t have it!
 The Remotion CLI that you can invoke using `npx remotion` now has full autocomplete support in Fig! You have to do nothing except install Fig.
 
 <img src="/img/fig.gif" />
@@ -78,13 +82,13 @@ We added the necessary modifications to our default Webpack config, and [even co
 
 Contributors to Remotion would previously often struggle to correctly set up our monorepo. Indeed it was hard to correctly link all the packages and too easy to mess it up and run into error messages.
 
-This is why we are happy to have migrated to `pnpm` , which gets rid of the linking problems and also speeds up installation significantly. In your CI systems, we saw build times go down by 40%, which allows to iterate much more faster.
+This is why we are happy to [have migrated to `pnpm`](https://github.com/remotion-dev/remotion/pull/627), which gets rid of the linking problems and also speeds up installation significantly. In your CI systems, we saw build times go down by 40%, which allows to iterate much more faster.
 
 _Thanks to [Sergio Moreno](https://github.com/remotion-dev/remotion/pull/627) for implementing this migration!_
 
 ## “Empty” template
 
-A new template has been added to `npm init video` / `yarn create video`: The blank template.
+[A new template](https://github.com/remotion-dev/template-empty) has been added to `npm init video` / `yarn create video`: The blank template.
 This template contains only the bare minimum Remotion boilerplate and a completely empty canvas. It is especially useful for people already familiar with Remotion who would like to skip deleting the Hello World project every time.
 
 _Thanks to [Aneesh Relan](https://github.com/remotion-dev/remotion/pull/620) for creating this template!_
@@ -109,3 +113,10 @@ A few interesting updates for users of `@remotion/three`:
 - Added possibility to customize `<Player>` error message - _Thanks [AudreyKj](https://github.com/remotion-dev/remotion/pull/654)_!
 - Windows Node.JS 14 cleanup bug fixed - _Thanks [Raznov](https://github.com/remotion-dev/remotion/pull/634)_!
 - Upgraded Docusaurus to the newest version, obtaining the newest features and layouts
+
+## Hacktoberfest Roundup
+
+We opted into participating in Hacktoberfest, and put $100 bounties on [11 issues](https://github.com/remotion-dev/remotion/issues?q=+label%3A%22%F0%9F%A5%A8++hacktoberfest%22+) as an extra incentive!
+Every single of those issue has been picked up and solved! Every contributor did a great job, many greatly surpassing our expectations!
+
+Thank you everybody who participated and contributed to this release!
